--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,2 @@
-/w1practicum1/
-/w1practicum2/
-/w2practicum1/
-/w2practicum2/
-/w2practicum3/
-/w3practicum2/
-/w4practium1/
 /w4practicum2/
-/w4practicum1/
+/Klant.class
