minor changes to w3p2 and w5 p3/4 WIP + clean-up

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,10 @@
 /w4practicum2/
-/Klant.class
+/w1practicum1/
+/w1practicum2/
+/w2practicum1/
+/w2practicum2/
+/w2practicum3/
+/w3practicum2/
+/w4practicum1/
+/w5p3/
+/w5p4/
